[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/SoundControler.gd" type="Script" id=1]
[ext_resource path="res://Sound/grappling hook 2.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/grappling hook.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/koła.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/sample/spark.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/repair.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/stuknięcie robota 2 dzwieki.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/toycar wheels.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/podklady/podklad do zaloopowania.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound/podklady/podkład.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/podklady/Untitled.wav" type="AudioStream" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.5094
margin_top = -2.64148
margin_right = 1.5094
margin_bottom = -2.64148
script = ExtResource( 1 )

[node name="SFX" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Hook1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 2 )

[node name="Hook2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 3 )
volume_db = 9.36

[node name="Wheels" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="Spark" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Repair" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="Robot_Bip_Bop" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )

[node name="ToyWheels" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 0.36

[node name="Background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="A" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 9 )

[node name="B" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 10 )

[node name="C" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource( 11 )
